--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,60 @@
   display: revert;
 }
 
+input[type=checkbox] {
+  position: relative;
+  cursor: pointer;
+  border: solid rgb(0, 0, 0);
+  border-width: 1px;
+  border-radius: 10%;
+}
+input[type=checkbox]:before {
+  content: "";
+  display: block;
+  border-radius: 10%;
+  width: 20px;
+  height: 20px;
+  top: 0;
+  left: 0;
+  background-color:#e9e9e9;
+}
+input[type=checkbox]:checked:before {
+  content: "";
+  display: block;
+  
+  width: 20px;
+  height: 20px;
+  top: 0;
+  left: 0;
+  background-color:#5e5e5e;
+}
+input[type=checkbox]:checked:after {
+  content: "";
+  display: block;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  position: absolute;
+  top: 4px;
+  left: 8px;  
+}
+
+/* Stylowanie tabeli */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+table td {
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
 }
@@ -93,25 +147,15 @@ textarea {
   padding-right: 2rem;
 }
 
-.bg-white {
-  background-color: #fff;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
 
-.border-2 {
+.border-white {
   border-style: solid;
   border-width: 2px;
-}
-
-.border-white {
   border-color: white;
-}
-
-.rounded {
-  border-radius: 0.75rem;
+  border-radius: 1.25rem;
 }
 
 .w-64 {
@@ -137,12 +181,6 @@ textarea {
   color: white;
 }
 
-.border-black {
-  border-style: solid;
-  border-color: rgb(17 24 39);
-  border-width: 0.2rem;
-}
-
 .text-border-green {
   color: rgb(20 83 45);
   -webkit-text-stroke: 1.5px rgb(17 24 39);
@@ -152,4 +190,18 @@ textarea {
   border-bottom: solid;
   border-bottom-color: rgb(17 24 39);
   border-bottom-width: 6px;
+}
+
+.main-button {
+  text-align: center;
+  background-color: #fff;
+  width: 20rem;
+  display: block;
+  border-style: solid;
+  border-color: rgb(17 24 39);
+  border-width: 0.2rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  border-radius: 0.75rem;
+  cursor: pointer;
 }
