--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,79 @@
   display: revert;
 }
 
-input[type=checkbox] {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: white;
+}
+
+header {
+  display: flex;  
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10%;
+  background-color: #22202C;
+  overflow: hidden;  
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+  z-index: 9999;
+  font-size: larger;
+}
+
+.logo {
+  cursor: pointer;
+  height: 60px;
+}
+
+.nav__links a,
+.second-button,
+.overlay__content a {  
+  font-weight: 500;
+  color: #00A54D;
+  text-decoration: none;
+}
+
+.nav__links {
+  list-style: none;
+  display: flex;
+}
+
+.nav__links li {
+  padding: 0px 20px;
+}
+
+.nav__links li a {
+  transition: color 0.3s ease 0s;
+}
+
+.nav__links li a:hover {
+  color: #007436;
+}
+
+.second-button {
+  padding: 9px 25px;
+  background-color: #00A54D;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: background-color 0.3s ease 0s;
+}
+
+.second-button:hover {
+  background-color: #007436;
+}
+
+input[type="checkbox"] {
   position: relative;
   cursor: pointer;
   border: solid rgb(0, 0, 0);
   border-width: 1px;
   border-radius: 10%;
+  z-index: 0;
 }
-input[type=checkbox]:before {
+input[type="checkbox"]:before {
   content: "";
   display: block;
   border-radius: 10%;
@@ -22,7 +87,7 @@ input[type=checkbox]:before {
   left: 0;
   background-color:#e9e9e9;
 }
-input[type=checkbox]:checked:before {
+input[type="checkbox"]:checked:before {
   content: "";
   display: block;
   
@@ -32,7 +97,7 @@ input[type=checkbox]:checked:before {
   left: 0;
   background-color:#5e5e5e;
 }
-input[type=checkbox]:checked:after {
+input[type="checkbox"]:checked:after {
   content: "";
   display: block;
   width: 5px;
@@ -43,13 +108,12 @@ input[type=checkbox]:checked:after {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
   position: absolute;
-  top: 4px;
-  left: 8px;  
+  top: 3px;
+  left: 7px;  
 }
 
 /* Stylowanie tabeli */
-table {
-  width: 100%;
+table {  
   border-collapse: collapse;
   margin-top: 20px;
 }
@@ -61,147 +125,19 @@ table td {
 
 body {
   font-family: 'Roboto', sans-serif;
+  background-color: #18171F;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
 
-ol, ul {
-  list-style: none;
-}
 
-img {
-  max-width: 100%;
-}
-
-table {
-  border-collapse: collapse;
-}
-
-textarea {
-  white-space: revert;
-}
-
-.h-100vh {
-  height: 100vh;
-}
-
-.text-2xl {
-  font-size: 2rem;
-}
-
-.text-3xl {
-  font-size: 2.5rem;
-}
-
-.bg-green-900{
-  background-color: rgb(20 83 45);
-}
-
-.text-white {
-  color: aliceblue;
-}
-
-.flex {
+.flex {  
   display: flex;
-}
-
-.items-center {
-  align-items: center;
-}
-
-.justify-center {
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
 }
 
-.py-2 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.px-2 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-3 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.px-3 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-4 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.px-4 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.border-white {
-  border-style: solid;
-  border-width: 2px;
-  border-color: white;
-  border-radius: 1.25rem;
-}
-
-.w-64 {
-  width: 20rem;
-}
-
-.block {
-  display: block;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.font-semibold {
-  font-weight: 600;
-}
-.text-black {
-  color: rgb(17 24 39);
-}
-
-.text-white {
-  color: white;
-}
-
-.text-border-green {
-  color: rgb(20 83 45);
-  -webkit-text-stroke: 1.5px rgb(17 24 39);
-}
-
-.bot-border {
-  border-bottom: solid;
-  border-bottom-color: rgb(17 24 39);
-  border-bottom-width: 6px;
-}
-
-.main-button {
-  text-align: center;
-  background-color: #fff;
-  width: 20rem;
-  display: block;
-  border-style: solid;
-  border-color: rgb(17 24 39);
-  border-width: 0.2rem;
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-  border-radius: 0.75rem;
-  cursor: pointer;
+.margin-top {
+  margin-top: 5rem;
 }
