login css redesign

--- a/src/index.css
+++ b/src/index.css
@@ -57,21 +57,34 @@ header {
 }
 
 .second-button {
-  padding: 9px 25px;
-  background-color: #00A54D;
+  display: inline-block;
+  padding: 10px 25px;
   border: none;
-  border-radius: 50px;
+  border-radius: 25px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  color: #fff;
+  background: linear-gradient(to right, #00A54D, #197D2D);
   cursor: pointer;
-  transition: background-color 0.3s ease 0s;
+  transition: transform 0.3s ease;
 }
 
 .second-button:hover {
-  background-color: #007436;
+  transform: scale(1.05);
 }
+
+.second-button:active {
+  transform: scale(1);
+  box-shadow: none;
+  transition: transform 0.1s ease;
+}
+
+
+
 
 input[type="checkbox"] {
   position: relative;
-  cursor: pointer;
   border: solid rgb(0, 0, 0);
   border-width: 1px;
   border-radius: 10%;
@@ -108,8 +121,8 @@ input[type="checkbox"]:checked:after {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
   position: absolute;
-  top: 3px;
-  left: 7px;  
+  top: 12%;
+  left: 34%;  
 }
 
 /* Stylowanie tabeli */
@@ -140,4 +153,49 @@ body {
 
 .margin-top {
   margin-top: 5rem;
+}
+
+
+.login {
+  background-color: #302d3e;
+  border-style: solid;
+  border-width: 5px;
+  border-radius: 1.2rem;
+  align-items: center;  
+  display: flex;
+  width: fit-content;  
+  text-align: center;    
+  justify-content: center;
+  color: #302d3e;
+}
+
+.login-input-l {
+  border-top-left-radius: 0.9rem;
+  border-bottom-left-radius: 0.9rem;
+  background-color: white;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  border-color: #302d3e;
+  border-width: 0.1rem;
+  border-style: solid;
+  color: black;
+}
+
+.login-input-r {
+  border-top-right-radius: 0.9rem;
+  border-bottom-right-radius: 0.9rem;
+  background-color: white;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  border-color: #302d3e;
+  border-width: 0.1rem;
+  color: black;
+  border-style: solid;
+}
+
+.login-button {
+  color: white;
+  font-weight:400;
+  cursor: pointer;
+  padding: 0.3rem 1.2rem 0.3rem 1.5rem;
 }
