--- a/src/index.css
+++ b/src/index.css
@@ -146,14 +146,20 @@ body {
   background-color: #18171F;
 }
 
-
+.width-60 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+}
 
 .flex {  
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-direction: column;  
   width: 100%;
+  
 }
 
 .margin-top {
