--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,11 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 10px 10%;
-  background-color: #22202C;
+  background-color: rgb(33,51,33);
   overflow: hidden;  
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
+  position: fixed;
+  top: 0;
+  width: 100%;
   z-index: 9999;
   font-size: larger;
 }
@@ -29,6 +29,13 @@ header {
 .logo {
   cursor: pointer;
   height: 60px;
+}
+
+.logo2 {
+  cursor: pointer;
+  font-size: 40px;
+  font-weight: 900;
+  color: rgb(199, 0, 40);
 }
 
 .nav__links a,
@@ -85,13 +92,11 @@ header {
   transition: transform 0.1s ease;
 }
 
-
-
-
 input[type="checkbox"] {
   position: relative;
-  border: solid rgb(0, 0, 0);
-  border-width: 1px;
+  border-style: solid;
+  border-color: black;
+  border-width: 2px;
   border-radius: 10%;
   z-index: 0;
 }
@@ -103,25 +108,25 @@ input[type="checkbox"]:before {
   height: 20px;
   top: 0;
   left: 0;
-  background-color:#e9e9e9;
+  background-color: white;
 }
 input[type="checkbox"]:checked:before {
   content: "";
   display: block;
-  
   width: 20px;
   height: 20px;
   top: 0;
   left: 0;
-  background-color:#5e5e5e;
+  background-color: rgb(150,150,150);
 }
 input[type="checkbox"]:checked:after {
   content: "";
   display: block;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
+  width: 0.3rem;
+  height: 0.65rem;
+  border-style: solid;
+  border-color: black;
+  border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -138,12 +143,12 @@ table {
 
 table td {
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid white;
 }
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #18171F;
+  background-color: rgb(64, 94, 65);
 }
 
 .width-60 {
@@ -222,4 +227,13 @@ body {
 
 .login-button:hover {
   color: #00A54D;
+}
+
+.title {
+  text-align: center;
+  padding-top: 5rem;
+  padding-bottom: 1rem;
+  font-weight:900;
+  font-size: 600%;
+  -webkit-text-stroke: 2px #302d3e
 }
