--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,13 @@
   margin: 0;
   padding: 0;
   color: white;
+  text-shadow: black 0px 0px 1px;
 }
 
 .checked {
   text-decoration: line-through;
-  opacity: 50%;
+  color: rgb(150,150,150);
+  text-shadow: none;
 }
 
 
@@ -105,7 +107,7 @@ input[type="checkbox"] {
   border-style: solid;
   border-color: black;
   border-width: 2px;
-  border-radius: 10%;
+  border-radius: 20%;
   z-index: 0;
 }
 input[type="checkbox"]:before {
@@ -123,6 +125,7 @@ input[type="checkbox"]:checked:before {
   display: block;
   width: 20px;
   height: 20px;
+  opacity: 50%;
   top: 0;
   left: 0;
   background-color: rgb(150,150,150);
@@ -147,6 +150,9 @@ input[type="checkbox"]:checked:after {
 table {  
   border-collapse: collapse;
   margin-top: 20px;
+  box-shadow: black 0px 0px 10px;
+  border-radius: 10px;
+  margin-bottom: 20px;
 }
 
 table td {
@@ -157,7 +163,11 @@ table td {
 body {
   font-family: 'Roboto', sans-serif;
   background-color: rgb(64, 94, 65);
+
+  
 }
+
+tr:nth-child(even) {background-color: rgb(57, 84, 58)}
 
 .width-60 {
   display: flex;
