--- a/src/index.css
+++ b/src/index.css
@@ -94,8 +94,6 @@ header {
   transform: scale(1.05);
 }
 
-
-
 .second-button:active {
   transform: scale(1);
   box-shadow: none;
@@ -146,30 +144,29 @@ input[type="checkbox"]:checked:after {
   left: 32%;  
 }
 
-/* Stylowanie tabeli */
-table {  
+table {
   border-collapse: collapse;
   margin-top: 20px;
   box-shadow: black 0px 0px 10px;
-  border-radius: 10px;
-  margin-bottom: 20px;
+  border-radius: 20px;
+  margin-bottom: 10%;
 }
 
 table td {
   padding: 10px;
-  border-bottom: 1px solid rgb(33,51,33);
+  border-bottom: 2px solid rgb(33,51,33);
+  color: black;
 }
 
-#arkusz-table tr:last-child td {
+#arkusz-table{
   border-bottom: none;
+  background-color: rgb(195,214,202);
 }
 
 body {
   font-family: 'Roboto', sans-serif;
   background-color: rgb(64, 94, 65);  
 }
-
-tr:nth-child(even) {background-color: rgb(57, 84, 58)}
 
 .width-60 {
   display: flex;
@@ -201,16 +198,18 @@ tr:nth-child(even) {background-color: rgb(57, 84, 58)}
 
 
 .login {
-  background-color: #302d3e;
+  background-color: rgb(33,51,33);
   border-style: solid;
   border-width: 5px;
   border-radius: 1.2rem;
   align-items: center;  
   display: flex;
-  width: fit-content;  
+  width: fit-content;
   text-align: center;    
   justify-content: center;
-  color: #302d3e;
+  color: rgb(33,51,33);
+  font-size: 1.2rem;
+  font-weight: 300;
 }
 
 .login-input-l {
@@ -219,7 +218,7 @@ tr:nth-child(even) {background-color: rgb(57, 84, 58)}
   background-color: white;
   padding-top: 0.2rem;
   padding-bottom: 0.2rem;
-  border-color: #302d3e;
+  border-color: rgb(33,51,33);
   border-width: 0.1rem;
   border-style: solid;
   color: black;
@@ -231,7 +230,7 @@ tr:nth-child(even) {background-color: rgb(57, 84, 58)}
   background-color: white;
   padding-top: 0.2rem;
   padding-bottom: 0.2rem;
-  border-color: #302d3e;
+  border-color: rgb(33,51,33);
   border-width: 0.1rem;
   color: black;
   border-style: solid;
@@ -246,7 +245,7 @@ tr:nth-child(even) {background-color: rgb(57, 84, 58)}
 }
 
 .login-button:hover {
-  color: #00A54D;
+  color: rgb(64, 94, 65);
 }
 
 .title {
@@ -254,6 +253,6 @@ tr:nth-child(even) {background-color: rgb(57, 84, 58)}
   padding-top: 5rem;
   padding-bottom: 1rem;
   font-weight:900;
-  font-size: 600%;
-  -webkit-text-stroke: 2px #302d3e
+  font-size: 800%;
+  -webkit-text-stroke: 2px rgb(33,51,33)
 }
